--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Dictionary</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="persian">فارسی</string>
+    <string name="english">english</string>
+    <string name="example">example</string>
+    <string name="synonyms">synonyms</string>
+    <string name="save">save</string>
 </resources>
